tests/NormalTests/paczka1/small_fuzzy/40423200.err
Error in line 1: Xz8 A755 81,5
Error in line 8: 0HDktqVnS A755 17,5
Error in line 10: xQZdluG1Nku A316 14,6
